--- a/src/app/recipes/details/details.component.scss
+++ b/src/app/recipes/details/details.component.scss
@@ -1,6 +1,71 @@
 section {
   width: 100%;
+  .dark-bg {
+    background-color: rgba(0, 0, 0, 50%);
+    backdrop-filter: blur(5px);
+    width: 100vw;
+    height: 100vh;
+    z-index: 7;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: fixed;
 
+    .centered {
+      z-index: 100;
+      display: flex;
+      border: 1px solid coral;
+      border-radius: 15px;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      flex-direction: column;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-content: center;
+      align-items: center;
+    }
+
+    .logout-modal-btn {
+      margin: 10px;
+      display: inline-block;
+      color: white;
+      text-align: center;
+      font-size: 20px;
+      text-decoration: none;
+      padding: 10px;
+      text-shadow: -3px 1px 3px rgb(0 0 0);
+      border-radius: 20px;
+      background: none;
+      border: 1px solid black;
+      box-shadow: 0px 0px 8px 0px white;
+      transition: all 300ms ease-in-out;
+    }
+
+    .logout-modal-btn:hover {
+      color: white;
+      cursor: pointer;
+      text-shadow: 0px 0px 20px white;
+      border-radius: 40px;
+      box-shadow: 0px 0px 10px coral;
+    }
+
+    .logout-modal-btn:active {
+      color: black;
+      cursor: pointer;
+      text-shadow: 0px 0px 20px white;
+      background-color: white;
+      border-radius: 40px;
+    }
+
+    .logout-modal-header {
+      padding: 10px;
+      color: coral;
+      font-size: 30px;
+      text-align: center;
+    }
+  }
   .list-container {
     max-width: 80%;
     margin: 2rem auto;
