--- a/src/app/core/macros/macros.component.scss
+++ b/src/app/core/macros/macros.component.scss
@@ -2,6 +2,16 @@
   width: 100%;
   height: 100vh;
 }
+h3 {
+  color: rgb(255, 255, 255);
+  font-size: 1.3rem;
+  text-align: center;
+  word-break: break-word;
+  white-space: normal;
+  text-overflow: ellipsis;
+  text-align: center;
+  margin-top: 1rem;
+}
 .error-container {
   position: absolute;
   display: flex;
@@ -47,6 +57,75 @@
     box-shadow: 0px 0px 10px coral, 0px 0px 10px rgb(255, 255, 255);
   }
 }
+.search-form {
+  margin: 1.5rem auto;
+  display: flex;
+  width: 100%;
+  gap: 1rem;
+  max-width: 50%;
+  color: white;
+  text-align: center;
+  font-size: 20px;
+  text-decoration: none;
+  text-shadow: 0px 0px 20px #ffffff;
+  flex-direction: column;
+  align-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+  transition: all 300ms ease-in-out;
+
+  div {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    border: 1px solid coral;
+    border-radius: 10px;
+    backdrop-filter: blur(5px);
+
+    label {
+      font-size: 1.4rem;
+      text-decoration: none;
+      color: #ffab8c;
+      outline-color: rgb(255, 255, 255);
+      text-shadow: -3px 2px 1px black, 0px 0px 20px white;
+    }
+
+    input {
+      background: none;
+      outline: none;
+      border: none;
+      color: coral;
+      font-size: 20px;
+      width: 60%;
+      display: inline-block;
+      border-bottom: solid rgb(117, 117, 117);
+      box-sizing: border-box;
+      padding: 10px;
+      border-radius: 0 4px 4px 4px;
+      margin: 15px auto;
+      resize: none;
+      transition: 0.5s;
+    }
+
+    input:hover {
+      text-shadow: 0px 0px 20px rgb(255, 255, 255);
+      color: #ffffff;
+      transition: 0.1s;
+      border-radius: 15px;
+    }
+
+    input:focus {
+      color: #ffffff;
+      width: 80%;
+      transition: 0.5s;
+      border: none;
+      outline: none;
+      border-bottom: white solid;
+      background: none;
+      background-image: none;
+    }
+  }
+}
 .no-content {
   max-width: 80%;
   margin: 2rem auto;
@@ -67,9 +146,10 @@
 .table-container {
   width: 100%;
   max-width: 80%;
-  margin: auto;
+  margin: 2rem auto;
   border: 1px solid coral;
   border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.7411764706);
   backdrop-filter: blur(10px);
 
   table {
