--- a/src/app/recipes/browse/list.component.scss
+++ b/src/app/recipes/browse/list.component.scss
@@ -1,5 +1,142 @@
 section {
+  .dark-bg {
+    background-color: rgba(0, 0, 0, 50%);
+    backdrop-filter: blur(5px);
+    width: 100vw;
+    height: 100vh;
+    z-index: 7;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: fixed;
+
+    .centered {
+      z-index: 100;
+      display: flex;
+      border: 1px solid coral;
+      border-radius: 15px;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      flex-direction: column;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-content: center;
+      align-items: center;
+    }
+
+    .logout-modal-btn {
+      margin: 10px;
+      display: inline-block;
+      color: white;
+      text-align: center;
+      font-size: 20px;
+      text-decoration: none;
+      padding: 10px;
+      text-shadow: -3px 1px 3px rgb(0 0 0);
+      border-radius: 20px;
+      background: none;
+      border: 1px solid black;
+      box-shadow: 0px 0px 8px 0px white;
+      transition: all 300ms ease-in-out;
+    }
+
+    .logout-modal-btn:hover {
+      color: white;
+      cursor: pointer;
+      text-shadow: 0px 0px 20px white;
+      border-radius: 40px;
+      box-shadow: 0px 0px 10px coral;
+    }
+
+    .logout-modal-btn:active {
+      color: black;
+      cursor: pointer;
+      text-shadow: 0px 0px 20px white;
+      background-color: white;
+      border-radius: 40px;
+    }
+
+    .logout-modal-header {
+      padding: 10px;
+      color: coral;
+      font-size: 30px;
+      text-align: center;
+    }
+  }
   width: 100%;
+
+  .search-form {
+    margin: 1.5rem auto;
+    display: flex;
+    width: 100%;
+    gap: 1rem;
+    max-width: 50%;
+    color: white;
+    text-align: center;
+    font-size: 20px;
+    text-decoration: none;
+    text-shadow: 0px 0px 20px #ffffff;
+    flex-direction: column;
+    align-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    transition: all 300ms ease-in-out;
+
+    div {
+      display: flex;
+      flex-direction: column;
+      width: 40%;
+      border: 1px solid coral;
+      border-radius: 10px;
+      backdrop-filter: blur(5px);
+
+      label {
+        font-size: 1.4rem;
+        text-decoration: none;
+        color: #ffab8c;
+        outline-color: rgb(255, 255, 255);
+        text-shadow: -3px 2px 1px black, 0px 0px 20px white;
+      }
+
+      input {
+        background: none;
+        outline: none;
+        border: none;
+        color: coral;
+        font-size: 20px;
+        width: 60%;
+        display: inline-block;
+        border-bottom: solid rgb(117, 117, 117);
+        box-sizing: border-box;
+        padding: 10px;
+        border-radius: 0 4px 4px 4px;
+        margin: 15px auto;
+        resize: none;
+        transition: 0.5s;
+      }
+
+      input:hover {
+        text-shadow: 0px 0px 20px rgb(255, 255, 255);
+        color: #ffffff;
+        transition: 0.1s;
+        border-radius: 15px;
+      }
+
+      input:focus {
+        color: #ffffff;
+        width: 80%;
+        transition: 0.5s;
+        border: none;
+        outline: none;
+        border-bottom: white solid;
+        background: none;
+        background-image: none;
+      }
+    }
+  }
+
   .error-container {
     display: flex;
     justify-content: center;
@@ -106,6 +243,11 @@ section {
       justify-content: center;
       flex-wrap: wrap;
 
+      .found-text {
+        width: 100%;
+        text-shadow: -1px 2px 1px white;
+      }
+
       .card {
         position: relative;
         box-shadow: 0px 1px 2px 0px white, 0px -1px 3px 0px coral;
@@ -130,6 +272,7 @@ section {
             word-break: break-word;
             white-space: normal;
             text-overflow: ellipsis;
+            transition: 300ms ease-in-out;
           }
         }
 
@@ -193,8 +336,19 @@ section {
           margin: 10px;
         }
       }
+      .pic-container {
+        border-radius: 10px;
+        transition: 300ms ease-in-out;
+        margin-top: 1rem;
+      }
 
-      .card:hover {
+      .header-container:hover {
+        text-decoration: underline;
+        cursor: pointer;
+        text-shadow: 0px 0px 20px whitesmoke;
+        color: white;
+      }
+      .pic-container:hover {
         cursor: pointer;
         box-shadow: 0px 0px 20px whitesmoke;
       }
