--- a/src/app/core/navigation/navigation.component.scss
+++ b/src/app/core/navigation/navigation.component.scss
@@ -25,32 +25,34 @@ header {
     gap: 10rem;
     padding: 20px;
 
-    li a {
+    li .route {
       font-size: 1.4rem;
       text-decoration: none;
-      color: #ffab8c;
+      color: coral;
       outline-color: yellow;
       text-shadow: -3px 2px 1px black, 0px 0px 20px white;
       transition: all 300ms ease-in-out;
     }
 
-    li a:hover {
+    li .active {
+      font-size: 1.4rem;
+      text-decoration: none;
+      color: #ffffff;
+      outline-color: yellow;
+      text-shadow: -3px 2px 1px black, 0px 0px 20px white;
+      transition: all 300ms ease-in-out;
+    }
+
+    li .route:hover {
       color: white;
       text-shadow: 0px 0px 20px whitesmoke, 0px 0px 20px coral;
-      transform: translate3d(0px, -3px, 0px);
       display: block;
     }
 
-    li a:active {
+    li .route:active {
       color: rgb(248, 244, 0);
       text-shadow: 0px 0px 20px whitesmoke, 0px 0px 20px coral;
       display: block;
-    }
-
-    li a:not(:hover) {
-      transition: 300ms;
-      transform: translate3d(0px, 0px, 0px);
-      color: coral;
     }
 
     .logo {
@@ -95,7 +97,7 @@ header {
         display: none;
       }
 
-      li a {
+      li .route {
         font-size: 0.8rem;
       }
     }
