--- a/src/app/recipes/my-recipes/my-recipes.component.scss
+++ b/src/app/recipes/my-recipes/my-recipes.component.scss
@@ -106,6 +106,16 @@ section {
     border-radius: 15px;
     border: 1px solid coral;
 
+    .sort-container {
+      text-align: center;
+      max-width: 20%;
+      margin: 1rem auto 0;
+      padding: 1rem;
+      border: 1px solid coral;
+      border-radius: 10px;
+      backdrop-filter: blur(5px);
+    }
+
     .search-form {
       margin: 1.5rem auto;
       display: flex;
