--- a/src/app/recipes/browse/list.component.scss
+++ b/src/app/recipes/browse/list.component.scss
@@ -237,6 +237,16 @@ section {
     border-radius: 15px;
     border: 1px solid coral;
 
+    .sort-container {
+      text-align: center;
+      max-width: 20%;
+      margin: 1rem auto 0;
+      padding: 1rem;
+      border: 1px solid coral;
+      border-radius: 10px;
+      backdrop-filter: blur(5px);
+    }
+
     .card-container {
       display: flex;
       gap: 5rem;
