--- a/src/app/recipes/details/details.component.html
+++ b/src/app/recipes/details/details.component.html
@@ -41,6 +41,16 @@
             </ng-container>
           </div>
           <div class="text-container">
+            <h3>Created by:
+            </h3>
+            <p *ngIf="recipeService.recipeDetails.owner === authService.user?.id">You</p>
+            <p *ngIf="recipeService.recipeDetails.owner !== authService.user?.id">
+              {{recipeService.recipeDetails.ownerName}}</p>
+            <h3>Created on:
+              <p>{{recipeService.recipeDetails.createdAt|date}}</p>
+            </h3>
+          </div>
+          <div class="text-container">
             <h3>Difficulty:</h3>
             <p>{{recipeService.recipeDetails.difficulty}}</p>
             <h3>Portions:</h3>
@@ -49,15 +59,6 @@
             <p class="ingredients">{{recipeService.recipeDetails.ingredients}}</p>
             <h3>Full recipe:</h3>
             <p class="recipe">{{recipeService.recipeDetails.fullRecipe}}</p>
-          </div>
-          <div class="text-container">
-            <h3>Created by:
-            </h3>
-            <p *ngIf="recipeService.isOwner">You</p>
-            <p *ngIf="!recipeService.isOwner">{{recipeService.recipeDetails.ownerName}}</p>
-            <h3>Created on:
-              <p>{{recipeService.recipeDetails.createdAt|date}}</p>
-            </h3>
           </div>
         </li>
       </ul>
