--- a/src/app/recipes/details/details.component.scss
+++ b/src/app/recipes/details/details.component.scss
@@ -146,7 +146,7 @@ section {
             color: coral;
             font-size: 3.3rem;
             text-align: center;
-            text-shadow: -1px 1px 0px white;
+            text-shadow: -3px 2px 1px black, 0px 0px 20px white;
           }
         }
 
@@ -161,6 +161,7 @@ section {
             padding: 10px;
             color: #ffffff;
             text-shadow: 0px 0px 20px #000000;
+            text-decoration: 1px underline;
           }
 
           p,
@@ -177,6 +178,7 @@ section {
           }
           h3 {
             color: coral;
+            text-shadow: -3px 2px 1px black, 0px 0px 20px white;
             font-size: 1.3rem;
           }
         }
