updates on footer and added some logic for about page

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -9,7 +9,7 @@
   </p>
   <ul class="footer-body" role="list">
     <li><a routerLink="/">Home</a></li>
-    <li><a routerLink="/about">About</a></li>
+    <li><a (click)="coreService.handleHideAbout(true)">About</a></li>
     <ng-container *ngIf="!isLoggedIn">
       <li><a routerLink="/auth/login">Login</a></li>
       <li><a routerLink="/auth/register">Register</a></li>
@@ -18,10 +18,4 @@
       <li><a routerLink="/auth/logout">Logout</a></li>
     </ng-container>
   </ul>
-  <!-- TODO: FOOTER FOR LOGGED USERS -->
-  <!-- <ul class="footer-body" role="list">
-    <li><a routerLink="/home">Home</a></li>
-    <li><a routerLink="/home">About</a></li>
-    <li><a routerLink="/home">Logout</a></li>
-  </ul> -->
 </footer>
