--- a/src/app/auth/profile/profile.component.scss
+++ b/src/app/auth/profile/profile.component.scss
@@ -205,7 +205,7 @@ section {
     .card-container {
       display: flex;
       gap: 5rem;
-      justify-content: flex-start;
+      justify-content: center;
       flex-wrap: wrap;
       padding: 1rem;
 
